# swagger/openapi.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "pos-tech",
+    "title": "pos-tech v2",
     "version": "1.0.0",
     "contact": {}
   },
@@ -312,6 +312,21 @@
         }
       }
     },
+    "/pagamento/47/pedido/47/envia-confirmacao": {
+      "patch": {
+        "tags": [
+          "pagamentos"
+        ],
+        "summary": "Envia Confirmação",
+        "description": "Envia Confirmação",
+        "operationId": "enviaConfirmaO",
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/pedidos/lista": {
       "get": {
         "tags": [
@@ -327,14 +342,29 @@
         }
       }
     },
-    "/pedidos/status/update": {
+    "/pedidos/1/status/RECEBIDO": {
       "put": {
         "tags": [
           "pedidos"
         ],
-        "summary": "Atualiza status Pedido",
-        "description": "Atualiza status Pedido",
-        "operationId": "atualizaStatusPedido",
+        "summary": "Altera Status do Pedido",
+        "description": "Altera Status do Pedido",
+        "operationId": "alteraStatusDoPedido",
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/pedidos/1/status": {
+      "get": {
+        "tags": [
+          "pedidos"
+        ],
+        "summary": "Recupera Status do Pedido",
+        "description": "Recupera Status do Pedido",
+        "operationId": "recuperaStatusDoPedido",
         "responses": {
           "200": {
             "description": ""
